--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer-core": "^5.1.7",
     "bower": "^1.3.1",
     "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "^2.4.3",
     "gulp-livereload": "^3.5.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-postcss": "^4.0.3",
     "gulp-sass": "^1.3.2",
     "gulp-uglify": "^1.1.0",
     "gulp-webserver": "^0.9.0",
